# cmpm146-final

./: .gitignore  README.md  codex_cli_prompts.md  idea.md  othello_project_directions.md  pyproject.toml
bots/: __init__.py  base.py  factory.py  greedy_bot.py  heuristic_bot.py  heuristics.py  mcts_bot.py  minimax_bot.py  random_bot.py
engine/: __init__.py  othello.py
sim/: __init__.py  __main__.py  analysis.py  experiment.py  export.py  presets.py  tournament.py
tests/: test_baseline_bots.py  test_cli_ui.py  test_experiment_mode.py  test_heuristic_bot.py  test_mcts_bot.py  test_minimax_bot.py  test_othello_engine.py  test_replay_export.py  test_sim_analysis.py  test_sim_exports.py  test_tournament.py
ui/: __init__.py  __main__.py  cli.py  game.py  replay.py
